manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote-app-ui
  name:  vote-app-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  vote-app-ui
  template:
    metadata:
      labels:
        app:  vote-app-ui
    spec:
      containers:
        - image: quay.io/openshift-pipeline/vote-ui:latest
          imagePullPolicy: Always
          name:  vote-app-ui
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
